Update .env configuration

--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
 backend_url=http://adesinaayode-3030.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
-sentiment_analyzer_url=https://sentianalyzer.1pe97ipd7b3r.us-south.codeengine.appdomain.cloud/
+sentiment_analyzer_url=https://sentianalyzer.1pmspuydiiuv.us-south.codeengine.appdomain.cloud/
