--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,18 @@
 {
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "node": true
+  },
+  "extends": "eslint:recommended",
+  "parserOptions": {
+    "ecmaVersion": 12,
+    "sourceType": "module"
+  },
   "rules": {
-    "no-unused-vars": ["error", { "args": "none" }]
+    "semi": ["error", "always"],
+    "quotes": ["error", "double"],
+    "no-unused-vars": "warn",
+    "no-console": "off"
   }
 }
