--- a/.eslintrc
+++ b/.eslintrc
@@ -1,18 +1,8 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true,
-    "node": true
-  },
-  "extends": "eslint:recommended",
-  "parserOptions": {
-    "ecmaVersion": 12,
-    "sourceType": "module"
-  },
-  "rules": {
-    "semi": ["error", "always"],
-    "quotes": ["error", "double"],
-    "no-unused-vars": "warn",
-    "no-console": "off"
-  }
+    "env": {
+        "es6": true
+    },
+    "parserOptions": {
+        "ecmaVersion": 8
+    }
 }
