--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
 backend_url=https://adesinaayode-3030.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai/
-sentiment_analyzer_url=https://unique-sentianalyzer.1pmspuydiiuv.us-south.codeengine.appdomain.cloud/
+sentiment_analyzer_url=https://sentianalyzer.1pvzp6ssfl6f.us-south.codeengine.appdomain.cloud/
